Ticket #28604: Allow to update commit message after transaction start.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -103,6 +103,7 @@ class.com.top_logic.layout.editor.commands.I18NConstants.RELEASED_LAYOUT_CONFIGU
 class.com.top_logic.layout.editor.commands.I18NConstants.RESET_LAYOUT_CONFIG__USER = Layout-Konfiguration für Benutzer "{0}" zurückgesetzt.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = Die Gruppe kann nicht zugeklappt werden.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Auf- oder zuklappen
+class.com.top_logic.layout.form.component.I18NConstants.CREATED_OBJECT = Objekt erstellt.
 class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Objekt erstellt: {0}
 class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Objekt gelöscht: {0}
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE = Aktualisieren
