Ticket #28604: tl-demo: Label for composition elements.
Enhanced test for compositions, since this test model is also useful to
testing undo and redo of composition references.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.containmentContext.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.containmentContext.messages_de.properties
@@ -6,6 +6,7 @@ model.test.containmentContext.Thing.name = Name
 model.test.containmentContext.Thing.uses = Benötigt
 model.test.containmentContext.Thing.world = Welt
 model.test.containmentContext.Usage = Benutzung
+model.test.containmentContext.Usage.name = Name
 model.test.containmentContext.Usage.reason = Grund
 model.test.containmentContext.Usage.subject = Subjekt
 model.test.containmentContext.Usage.thing = Ding
