--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.containmentContext.messages_en.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.containmentContext.messages_en.properties
@@ -6,6 +6,7 @@ model.test.containmentContext.Thing.name = Name
 model.test.containmentContext.Thing.uses = Requires
 model.test.containmentContext.Thing.world = World
 model.test.containmentContext.Usage = Usage
+model.test.containmentContext.Usage.name = Name
 model.test.containmentContext.Usage.reason = Reason
 model.test.containmentContext.Usage.subject = Subject
 model.test.containmentContext.Usage.thing = Thing
