Ticket #28604: Implemented merge strategy to resolve conflicts.

--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1,8 +1,8 @@
-class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING = Values set to the property "{1}" of object "{0}" are no longer available (deleted in the meantime): {2}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Values "{2}" set to the property "{1}" of object "{0}" are no longer available (deleted in the meantime), setting value to "{3}".
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = The object that would be created already exists: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_DELETE_NO_LONGER_EXISTS__OBJ = The object that should be deleted does no longer exist: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = The object that should be changed does no longer exist: {0}
-class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_VALUE_CHANGED_IN_BETWEEN__OBJ_PART_ORIG_CURR = The property "{1}" of object "{0}" has been changed from its original value "{2}" to the new value "{3}" in the meantime.
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_VALUE_CHANGED_IN_BETWEEN__OBJ_PART_ORIG_CURR_MERGED = The property "{1}" of object "{0}" has been changed from its original value "{2}" to the new value "{3}" in the meantime, setting value to "{4}".
 class.com.top_logic.element.changelog.model.I18NConstants.REDO__MSG = Performed again: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.REVERTED__MSG = Reverted change: {0}
 class.com.top_logic.element.i18n.I18NConstants.I18N_PROXY_FIELD_LABEL__FIELD = Proxy for {0}
