Ticket #28604: Added change type description as classification.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
@@ -2,6 +2,8 @@ model.tl.changelog = Änderungshistorie
 model.tl.changelog.Change = Änderung
 model.tl.changelog.Change.belongsTo = Gehört zu
 model.tl.changelog.Change.belongsTo.tooltip = Die Änderung des Containers des geänderten Objektes. Nur gesetzt, wenn der Container ebenfalls geändert wurde.
+model.tl.changelog.Change.changeType = Änderungstyp
+model.tl.changelog.Change.changeType.tooltip = Der Typ dieser Änderung als Klassifikation.
 model.tl.changelog.Change.implicit = Implizit
 model.tl.changelog.Change.implicit.tooltip = Ob die Änderung bei einer Erzeugung oder Löschung implizit ist, weil das Objekt Teil eines anderen Objektes ist, das in derselben Transaktion angelegt oder gelöscht wurde.\ 
 model.tl.changelog.Change.object = Objekt
@@ -19,10 +21,18 @@ model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Änderungen
 model.tl.changelog.ChangeSet.date = Datum
 model.tl.changelog.ChangeSet.message = Message
+model.tl.changelog.ChangeSet.name = Name
 model.tl.changelog.ChangeSet.parentRev = Ausgangsrevision
 model.tl.changelog.ChangeSet.parentRev.tooltip = Die Revision, welche den Modellzustand repräsentiert, der durch die Änderung modifiziert wird.
 model.tl.changelog.ChangeSet.revision = Revision
 model.tl.changelog.ChangeSet.tooltip = Ein Change-Set fasst alle Änderungen zusammen, die in einer Transaktion vorgenommen wurden. Typischerweise führt eine Aktion im System höchstens eine Transaktion durch. Damit beschreibt ein Change-Set die Änderungen, die von einer atomaren Systemoperation durchgeführt wurden.
+model.tl.changelog.ChangeType = Art der Änderung
+model.tl.changelog.ChangeType.CREATE = Angelegt
+model.tl.changelog.ChangeType.CREATE.tooltip = Ein Objekt wurde neu erstellt.
+model.tl.changelog.ChangeType.DELETE = Gelöscht
+model.tl.changelog.ChangeType.DELETE.tooltip = Ein Objekt wurde gelöscht.
+model.tl.changelog.ChangeType.UPDATE = Geändert
+model.tl.changelog.ChangeType.UPDATE.tooltip = Die Werte von Eigenschaften eines Objektes haben sich geändert.
 model.tl.changelog.CreateOp = Objektanlage
 model.tl.changelog.CreateOp.id = Id
 model.tl.changelog.CreateOp.initializers = Initializers
