--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
@@ -2,6 +2,8 @@ model.tl.changelog = Changelog
 model.tl.changelog.Change = Change
 model.tl.changelog.Change.belongsTo = Belongs to
 model.tl.changelog.Change.belongsTo.tooltip = The change to the container of the changed object. Only set if the container has also been changed.
+model.tl.changelog.Change.changeType = Change type
+model.tl.changelog.Change.changeType.tooltip = The type of this change as a classification.
 model.tl.changelog.Change.implicit = Implicit
 model.tl.changelog.Change.implicit.tooltip = Whether the change is implicit in a creation or deletion because the object is part of another object that was created or deleted in the same transaction.\ 
 model.tl.changelog.Change.object = Object
@@ -19,10 +21,18 @@ model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Changes
 model.tl.changelog.ChangeSet.date = Date
 model.tl.changelog.ChangeSet.message = Message
+model.tl.changelog.ChangeSet.name = Name
 model.tl.changelog.ChangeSet.parentRev = Parent revision
 model.tl.changelog.ChangeSet.parentRev.tooltip = The revision, which represents the model state that is modified by the change.
 model.tl.changelog.ChangeSet.revision = Revision
 model.tl.changelog.ChangeSet.tooltip = A change set summarizes all changes that were made in a transaction. Typically, an action in the system performs at most one transaction. A change set therefore describes the changes made by an atomic system operation.
+model.tl.changelog.ChangeType = Type of change
+model.tl.changelog.ChangeType.CREATE = Created
+model.tl.changelog.ChangeType.CREATE.tooltip = An object was newly created.
+model.tl.changelog.ChangeType.DELETE = Deleted
+model.tl.changelog.ChangeType.DELETE.tooltip = An object was deleted.
+model.tl.changelog.ChangeType.UPDATE = Changed
+model.tl.changelog.ChangeType.UPDATE.tooltip = The values of an object's properties have changed.
 model.tl.changelog.CreateOp = Object instantiation
 model.tl.changelog.CreateOp.id = Id
 model.tl.changelog.CreateOp.initializers = Initializers
