Ticket #28604: Added configuration options to limit change log.

--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -153,6 +153,14 @@ com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig = Role rules 
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules = Rules
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules.tooltip = The list of known role rule configurations.
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.tooltip = <i>Configuration item</i> defining all definitions of role rules in the application.
+com.top_logic.element.changelog.ChangeLogListModelBuilder = Change log list model builder
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users = All users
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users.tooltip = Whether to build a change log for all users instead only for the currently logged-in user.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes = Include technical changes
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes.tooltip = Whether to include technical changes.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maximum time
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time.tooltip = How long to look into the past. <p> A value of <code>0</code> means unlimited. </p>
+com.top_logic.element.changelog.ChangeLogListModelBuilder.tooltip = <i>List model builder</i> for a table that displays the application's change log.
 com.top_logic.element.changelog.RevertCommandHandler = Revert command handler
 com.top_logic.element.changelog.RevertCommandHandler.tooltip = <i>Command</i> for reverting a <i>change set</i>.
 com.top_logic.element.comment.layout.CommentDialogComponent = Comment dialog component
