--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -153,6 +153,14 @@ com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig = Rollenregel
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules = Regeln
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules.tooltip = Die Liste der bekannten Konfigurationen von Rollenregeln.
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.tooltip = <i>Konfigurationselement</i>, das alle Definitionen von Rollenregeln in der Anwendung definiert.
+com.top_logic.element.changelog.ChangeLogListModelBuilder = Änderungsprotokoll
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users = Alle Benutzer
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users.tooltip = Ob ein Änderungsprotokoll für alle Benutzer statt nur für den aktuell angemeldeten Benutzer erstellt werden soll.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes = Technische Änderungen einbeziehen
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes.tooltip = Ob technische Änderungen aufgenommen werden sollen.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maximale Zeit
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time.tooltip = Wie lange man in die Vergangenheit schauen kann. <p> Ein Wert von <code>0</code> bedeutet unbegrenzt. </p>
+com.top_logic.element.changelog.ChangeLogListModelBuilder.tooltip = <i>Erbauer eines Listenmodells</i> für eine Tabelle, die das Änderungsprotokoll der Anwendung anzeigt.
 com.top_logic.element.changelog.RevertCommandHandler = Änderungen rückgängig machen
 com.top_logic.element.changelog.RevertCommandHandler.tooltip = <i>Befehl</i> zum Rückgängigmachen eines <i>Änderungssatzes</i>.
 com.top_logic.element.comment.layout.CommentDialogComponent = Kommentar-Dialogkomponente
