Ticket #28604: Enhanced model I18N.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
@@ -20,7 +20,8 @@ model.tl.changelog.ChangeSet = Change set
 model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Changes
 model.tl.changelog.ChangeSet.date = Date
-model.tl.changelog.ChangeSet.message = Message
+model.tl.changelog.ChangeSet.message = Description
+model.tl.changelog.ChangeSet.message.tooltip = The change description that was entered when the change was saved in the database.
 model.tl.changelog.ChangeSet.name = Name
 model.tl.changelog.ChangeSet.parentRev = Parent revision
 model.tl.changelog.ChangeSet.parentRev.tooltip = The revision, which represents the model state that is modified by the change.
@@ -53,7 +54,9 @@ model.tl.changelog.ErrorMessage.action = Action
 model.tl.changelog.ErrorMessage.tooltip = The operation cannot be performed. If the error is ignored, the remaining operations may still be performed.
 model.tl.changelog.Modification = Modification
 model.tl.changelog.Modification.newValue = New value
+model.tl.changelog.Modification.newValue.tooltip = The new value of a property set by a change.
 model.tl.changelog.Modification.oldValue = Old value
+model.tl.changelog.Modification.oldValue.tooltip = The value of a property overwritten by a change.
 model.tl.changelog.Modification.part = Property
 model.tl.changelog.Modification.part.tooltip = The property whose value has changed.
 model.tl.changelog.Modification.tooltip = The change to a single property of an object.
