--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
@@ -20,7 +20,8 @@ model.tl.changelog.ChangeSet = Change-Set
 model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Änderungen
 model.tl.changelog.ChangeSet.date = Datum
-model.tl.changelog.ChangeSet.message = Message
+model.tl.changelog.ChangeSet.message = Beschreibung
+model.tl.changelog.ChangeSet.message.tooltip = Die Änderungsbeschreibung, welche beim Festschreiben der Änderung in der Datenbank mitgegeben wurde.
 model.tl.changelog.ChangeSet.name = Name
 model.tl.changelog.ChangeSet.parentRev = Ausgangsrevision
 model.tl.changelog.ChangeSet.parentRev.tooltip = Die Revision, welche den Modellzustand repräsentiert, der durch die Änderung modifiziert wird.
@@ -38,7 +39,7 @@ model.tl.changelog.CreateOp.id = Id
 model.tl.changelog.CreateOp.initializers = Initializers
 model.tl.changelog.CreateOp.tooltip = Die Objektanlage beschreibt ein neu zu erstellendes Objekt. Jede vom Standardwert abweichende Eigenschaft ist wird durch eine eigene Zuweisungsoperation beschrieben.
 model.tl.changelog.CreateOp.type = Type
-model.tl.changelog.Creation = Erzeugung
+model.tl.changelog.Creation = Anlage
 model.tl.changelog.Creation.tooltip = Ein Objekt wurde angelegt. Die Erzeugung referenziert das angelegte Objekt nach der Änderung. Die Erzeugung beschreibt das angelegte Objekt als ganzes inklusive aller Eigenschaften des Objektes und aller über Kompositionsreferenzen referenzierten Teile.
 model.tl.changelog.DeleteOp = Löschoperation
 model.tl.changelog.DeleteOp.target = Target
@@ -51,9 +52,11 @@ model.tl.changelog.ErrorAction.IGNORE.tooltip = Die Operation überspringen und d
 model.tl.changelog.ErrorMessage = Fehlermeldung
 model.tl.changelog.ErrorMessage.action = Action
 model.tl.changelog.ErrorMessage.tooltip = Die Operation kann nicht durchgeführt werden. Wenn der Fehler ignoriert wird, können die verbleibenden Operationen möglicherweise trotzdem durchgeführt werden.
-model.tl.changelog.Modification = Modification
-model.tl.changelog.Modification.newValue = New value
-model.tl.changelog.Modification.oldValue = Old value
+model.tl.changelog.Modification = Eigenschaftsänderung
+model.tl.changelog.Modification.newValue = Neuer Wert
+model.tl.changelog.Modification.newValue.tooltip = Der durch eine Änderung gesetzte neue Wert einer Eigenschaft.
+model.tl.changelog.Modification.oldValue = Alter Wert
+model.tl.changelog.Modification.oldValue.tooltip = Der durch eine Änderung überschriebene Wert einer Eigenschaft.
 model.tl.changelog.Modification.part = Eigenschaft
 model.tl.changelog.Modification.part.tooltip = Die Eigenschaft, deren Wert sich verändert hat.
 model.tl.changelog.Modification.tooltip = Die Änderung an einer einzelnen Eigenschaft eines Objektes.
@@ -64,9 +67,9 @@ model.tl.changelog.SetOp = Zuweisungsoperation
 model.tl.changelog.SetOp.property = Property
 model.tl.changelog.SetOp.tooltip = Eine Zuweisung setzt den Wert einer Eigenschaft.
 model.tl.changelog.SetOp.value = Value
-model.tl.changelog.Update = Änderung
+model.tl.changelog.Update = Bearbeitung
 model.tl.changelog.Update.modifications = Eigenschaftsänderungen
-model.tl.changelog.Update.tooltip = Eine Änderung beschreibt die Veränderung von Eigenschaften eines bestehenden Objektes. Die Änderung bezieht sich auf den Originalzustand des Objektes vor der Änderung.
+model.tl.changelog.Update.tooltip = Eine Bearbeitung beschreibt die Veränderung von Eigenschaften eines bestehenden Objektes. Die Änderung bezieht sich auf den Originalzustand des Objektes vor der Änderung.
 model.tl.changelog.UpdateOp = Bearbeitungsoperation
 model.tl.changelog.UpdateOp.target = Target
 model.tl.changelog.UpdateOp.tooltip = Eine Bearbeitung weist einer Eigenschaft eines Objektes einen neuen Wert zu.\ 
