Ticket #28568: Add dynamic visibility annotation to fieldsets.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -376,6 +376,8 @@ com.top_logic.element.layout.formeditor.builder.TypedFormDefinition.tooltip = Ko
 com.top_logic.element.layout.formeditor.builder.TypedFormDefinition.type.tooltip = Der Typ, für den ein Formular definiert wird. <p> Wenn ein Objekt, das angezeigt wird, den angegebenen Typ hat, wird diese Formulardefinition zur Erstellung des Formulars verwendet. </p>
 com.top_logic.element.layout.formeditor.definition.FieldDefinition.attribute = Attribut
 com.top_logic.element.layout.formeditor.definition.FieldDefinition.attribute.tooltip = Gibt den Namen des Attributs zurück.
+com.top_logic.element.layout.formeditor.definition.GroupDefinition.dynamicVisibility = Dynamische Sichtbarkeit
+com.top_logic.element.layout.formeditor.definition.GroupDefinition.dynamicVisibility.tooltip = Algorithmus zur Berechnung der Sichtbarkeit der Gruppe.
 com.top_logic.element.layout.formeditor.definition.GroupProperties.collapsible = Zusammenklappbar
 com.top_logic.element.layout.formeditor.definition.GroupProperties.collapsible.tooltip = Ob die Gruppe mit einer Umschalttaste zugeklappt werden kann.
 com.top_logic.element.layout.formeditor.definition.GroupProperties.collapsibleValue = Zusammenklappbarer Wert
