--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -376,6 +376,8 @@ com.top_logic.element.layout.formeditor.builder.TypedFormDefinition.tooltip = Co
 com.top_logic.element.layout.formeditor.builder.TypedFormDefinition.type.tooltip = The type for which a form is defined. <p> If an object that is being displayed has the given type, this form definition is used to create the form. </p>
 com.top_logic.element.layout.formeditor.definition.FieldDefinition.attribute = Attribute
 com.top_logic.element.layout.formeditor.definition.FieldDefinition.attribute.tooltip = Returns the name of the attribute.
+com.top_logic.element.layout.formeditor.definition.GroupDefinition.dynamicVisibility = Dynamic visibility
+com.top_logic.element.layout.formeditor.definition.GroupDefinition.dynamicVisibility.tooltip = Algorithm to compute the visibility of the group.
 com.top_logic.element.layout.formeditor.definition.GroupProperties.collapsible = Collapsible
 com.top_logic.element.layout.formeditor.definition.GroupProperties.collapsible.tooltip = Whether the group can be collapsed using a toggle button.
 com.top_logic.element.layout.formeditor.definition.GroupProperties.collapsibleValue = Collapsible value
