Ticket #28629: Allow configuring the select column visibility.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -5762,9 +5762,9 @@ com.top_logic.layout.table.filter.TimeTableFilterProvider.Config.compare-in-syst
 com.top_logic.layout.table.filter.TimeTableFilterProvider.tooltip = <i>Berechnung eines vergleichbaren Tabellenfilters</i> für <i>Datumswerte</i>, wobei nur der Zeitwert angezeigt wird.
 com.top_logic.layout.table.model.AllVisibleColumnsProvider = Verfügbare Spalten
 com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.columns = Spalten
-com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.columns.tooltip = Spaltennamen für die konfigurierten Typen in seinem Formularmodell.
-com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded = Ausnehmen
-com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded.tooltip = Ob die ausgewählten <i>Spalten</i> von den auswählbaren Spalten ausgenommen werden müssen. Alle anderen Spalten haben ihre Standardsichtbarkeit.
+com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.columns.tooltip = Namen von Spalten, die vom Benutzer ausgewählt werden können (oder vom Benutzer nicht ausgewählt werden können, je nach dem Kennzeichen <i>Ausgewählte Spalten ausschließen</i> ).
+com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded = Ausgewählte Spalten ausschließen
+com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded.tooltip = Ob die ausgewählten <i>Spalten</i> von den auswählbaren Spalten ausgeschlossen werden sollen. Alle anderen Spalten haben ihre Standardsichtbarkeit.
 com.top_logic.layout.table.model.AllVisibleColumnsProvider.tooltip = <i>Tabellenkonfigurations-Plugin</i> für die Auswahl von Spalten, die von einem Benutzer ausgewählt werden können.
 com.top_logic.layout.table.model.ColumnBaseConfig = Konfiguration des Spaltenfußes
 com.top_logic.layout.table.model.ColumnBaseConfig.accessor = Accessor
@@ -5891,6 +5891,10 @@ com.top_logic.layout.table.model.IDColumnConfig.value.tooltip = Der technische S
 com.top_logic.layout.table.model.IDColumnTableConfigurationProvider = ID-Spalte
 com.top_logic.layout.table.model.IDColumnTableConfigurationProvider.tooltip = <i>Tabellenkonfigurations-Plugin</i> zum Festlegen der id-Spalte einer Tabelle. <p> Die id-Spalte ist die Spalte, für die ein Symbol des Typs Zeilenobjekte vor ihrem Wert hinzugefügt wird und die als Link zu ihrem Zeilenobjekt dargestellt wird. </p>
 com.top_logic.layout.table.model.Icons.SELECTION_COLUMN_WIDTH = Breite der Auswahlspalte von Tabellen.
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider = Sichtbarkeit der Auswahlspalte
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider.Config.visibility = Sichtbarkeit
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider.Config.visibility.tooltip = Benutzerdefinierter Anzeigemodus für die ausgewählte Spalte.
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider.tooltip = <i>Tabellenkonfigurations-Plugin</i> zum Konfigurieren der Sichtbarkeit der Select-Spalte.
 com.top_logic.layout.table.model.SimpleTableDataExport = Standard-Tabellen-Export
 com.top_logic.layout.table.model.SimpleTableDataExport.Config.executability = Ausführbarkeit
 com.top_logic.layout.table.model.SimpleTableDataExport.Config.executability.tooltip = Funktion, die berechnet, ob die gegebene <i>Tabellendaten</i> exportiert werden können.
