--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -5762,9 +5762,9 @@ com.top_logic.layout.table.filter.TimeTableFilterProvider.Config.compare-in-syst
 com.top_logic.layout.table.filter.TimeTableFilterProvider.tooltip = <i>Comparable table filter provider</i> for <i>date</i> values where only the time value is displayed.
 com.top_logic.layout.table.model.AllVisibleColumnsProvider = Available columns
 com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.columns = Columns
-com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.columns.tooltip = Column names for the configured types in its form model.
-com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded = Excluded
-com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded.tooltip = Whether the selected <i>Columns</i> must be excluded from the selectable columns. All other columns have their default visibility.
+com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.columns.tooltip = Names of columns that can be choosen by the user (or cannot be choosen by the user depending on the <i>exclude selected columns</i> flag).
+com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded = Exclude selected columns
+com.top_logic.layout.table.model.AllVisibleColumnsProvider.Config.excluded.tooltip = Whether the selected <i>Columns</i> should be excluded from the selectable columns. All other columns have their default visibility.
 com.top_logic.layout.table.model.AllVisibleColumnsProvider.tooltip = <i>Table configuration plug-in</i> for selecting columns that can be chosen by a user.
 com.top_logic.layout.table.model.ColumnBaseConfig = Column base configuration
 com.top_logic.layout.table.model.ColumnBaseConfig.accessor = Accessor
@@ -5891,6 +5891,10 @@ com.top_logic.layout.table.model.IDColumnConfig.value.tooltip = The technical co
 com.top_logic.layout.table.model.IDColumnTableConfigurationProvider = ID column table configuration provider
 com.top_logic.layout.table.model.IDColumnTableConfigurationProvider.tooltip = <i>Table configuration plug-in</i> to set the id column of a table. <p> The id column is the column for which an icon of the row objects type is added before its value and which is rendered as a link to its row object. </p>
 com.top_logic.layout.table.model.Icons.SELECTION_COLUMN_WIDTH = Width of the selection column of tables.
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider = Select column visibility
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider.Config.visibility = Visibility
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider.Config.visibility.tooltip = Custom display mode of the select column.
+com.top_logic.layout.table.model.SelectColumnVisibilityProvider.tooltip = <i>Table configuration plug-in</i> for configuring the visibility of the select column.
 com.top_logic.layout.table.model.SimpleTableDataExport = Simple table data export
 com.top_logic.layout.table.model.SimpleTableDataExport.Config.executability = Executability
 com.top_logic.layout.table.model.SimpleTableDataExport.Config.executability.tooltip = Function that computes the <i>executable state</i> for a given <i>table data</i>.
