--- a/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.xio.importer.I18NConstants.ERROR_GETTING_PROPERTY_FAILED__HANDLER_OBJ_PROP_MESSAGE = Der Wert der Eigenschaft "{2}" konnte nicht von Objekt "{1}" abgerufen werden: {3}
 com.top_logic.xio.command.XMLImportCommand = XML-Import-Befehl
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec = Spezifikation importieren
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec.tooltip = Container für die Definition des Import-Handlers.
@@ -157,6 +158,12 @@ com.top_logic.xio.importer.handlers.ReferenceImport = Referenz-Import
 com.top_logic.xio.importer.handlers.ReferenceImport.Config.format = Format
 com.top_logic.xio.importer.handlers.ReferenceImport.Config.format.tooltip = Formatkonverter des ID-Attributwerts.
 com.top_logic.xio.importer.handlers.ReferenceImport.tooltip = <i>Handler</i>, der den Wert eines <i>ID-Attributs</i> in eine Modellreferenz umwandelt.
+com.top_logic.xio.importer.handlers.ResKeyUpdate = Aktualisierung eines Ressourcenschlüssels
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language = Sprache
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language.tooltip = Die zu aktualisierende Sprache.
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute = XML-Attribut
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute.tooltip = Das zu lesende XML-Attribut.
+com.top_logic.xio.importer.handlers.ResKeyUpdate.tooltip = <i>Handler</i>, der einer Eigenschaft des Modells vom Typ <i>Ressourcenschlüssel</i> eine Übersetzung einer bestimmten Sprache hinzufügt.
 com.top_logic.xio.importer.handlers.ScopedImportHandler = Wechsel des Kontexts
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.argument-var = Argument var
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.argument-var.tooltip = Variable, die als Argument an die <i>Expr-Funktion</i> übergeben werden soll.
