--- a/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.xio.importer.I18NConstants.ERROR_GETTING_PROPERTY_FAILED__HANDLER_OBJ_PROP_MESSAGE = Failed to retrieve value of property "{2}" from object "{1}": {3}
 com.top_logic.xio.command.XMLImportCommand = XML import command
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec = Import spec
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec.tooltip = Container for the import handler definition.
@@ -157,6 +158,12 @@ com.top_logic.xio.importer.handlers.ReferenceImport = Reference import
 com.top_logic.xio.importer.handlers.ReferenceImport.Config.format = Format
 com.top_logic.xio.importer.handlers.ReferenceImport.Config.format.tooltip = Format converter of the ID attribute value.
 com.top_logic.xio.importer.handlers.ReferenceImport.tooltip = <i>Handler</i> converting the value of an <i>ID attribute</i> to a model reference.
+com.top_logic.xio.importer.handlers.ResKeyUpdate = Resource key update
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language = Language
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language.tooltip = The language to assign.
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute = XML attribute
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute.tooltip = The XML attribute to read.
+com.top_logic.xio.importer.handlers.ResKeyUpdate.tooltip = <i>Handler</i> adding a translation of a certain language to a model property of type <i>resource key</i>.
 com.top_logic.xio.importer.handlers.ScopedImportHandler = Scoped import handler
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.argument-var = Argument var
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.argument-var.tooltip = Variable to pass as argument to the <i>Expression</i> function.
