Ticket #28633: Cleanup: Allow to use all handler tags top-level.

--- a/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
@@ -675,6 +675,14 @@ com.top_logic.basic.config.equal.ConfigEquality.CompareMode.VALUE.tooltip = Die 
 com.top_logic.basic.config.equal.EqualityByValue = Gleichheit nach Wert
 com.top_logic.basic.config.equal.EqualityByValue.h-code.tooltip = Hash-Code basiert auf den Hash-Codes der Eigenschaftswerte.
 com.top_logic.basic.config.equal.EqualityByValue.tooltip = Superschnittstelle für <i>Konfigurationselement</i>, das wertmäßig gleich sein sollte.
+com.top_logic.basic.config.format.ConfiguredDateValueProvider = Konfigurierte Berechnung der Datumswerte
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.date-format = Datumsformat
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.date-format.tooltip = Das Muster für das Datumsformat.
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.locale = Schauplatz
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.locale.tooltip = Optionales festes Gebietsschema. <p> Wenn kein Gebietsschema angegeben wird, wird das Gebietsschema des aktuellen Benutzers verwendet. </p>
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.time-zone = Zeitzone
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.time-zone.tooltip = Optionale feste Zeitzone. <p> Wenn keine Zeitzone angegeben wird, wird die Zeitzone des aktuellen Benutzers verwendet. </p>
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.tooltip = <i>Berechnung von Formatwerten</i> zur Anpassung des <i>XML-Datumszeitformats</i>.
 com.top_logic.basic.config.internal.gen.NoImplementationClassGeneration = Keine Generierung von Implementierungsklassen
 com.top_logic.basic.config.internal.gen.NoImplementationClassGeneration.tooltip = Markiert eine <i>Konfigurationselement-Schnittstelle</i>, für die keine Implementierung generiert werden soll.
 com.top_logic.basic.config.json.JsonBinding = JSON-Bindung
