--- a/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
@@ -675,6 +675,14 @@ com.top_logic.basic.config.equal.ConfigEquality.CompareMode.VALUE.tooltip = The 
 com.top_logic.basic.config.equal.EqualityByValue = Equality by value
 com.top_logic.basic.config.equal.EqualityByValue.h-code.tooltip = Hash code base on the hash codes of the property values.
 com.top_logic.basic.config.equal.EqualityByValue.tooltip = Super interface for <i>configuration item</i> which should be equal by value.
+com.top_logic.basic.config.format.ConfiguredDateValueProvider = Configured date value provider
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.date-format = Date format
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.date-format.tooltip = The date format pattern.
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.locale = Locale
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.locale.tooltip = Optional fixed locale. <p> If no locale is specified, the locale of the current user is used. </p>
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.time-zone = Time zone
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.Config.time-zone.tooltip = Optional fixed timezone. <p> If no timezone is specified, the timezone of the current user is used. </p>
+com.top_logic.basic.config.format.ConfiguredDateValueProvider.tooltip = <i>Format value provider</i> adapting the <i>XML date time format</i>.
 com.top_logic.basic.config.internal.gen.NoImplementationClassGeneration = No implementation class generation
 com.top_logic.basic.config.internal.gen.NoImplementationClassGeneration.tooltip = Marks a <i>configuration item</i> interface that no implementation should be generated.
 com.top_logic.basic.config.json.JsonBinding = JSON binding
