--- a/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,5 @@
 class.com.top_logic.xio.importer.I18NConstants.ERROR_GETTING_PROPERTY_FAILED__HANDLER_OBJ_PROP_MESSAGE = Der Wert der Eigenschaft "{2}" konnte nicht von Objekt "{1}" abgerufen werden: {3}
+class.com.top_logic.xio.importer.handlers.I18NConstants.WARN_IGNORING_UNKNOWN__TAG = Warnung: Unbekanntes Tag "{0}" wird ignoriert.
 com.top_logic.xio.command.XMLImportCommand = XML-Import-Befehl
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec = Spezifikation importieren
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec.tooltip = Container für die Definition des Import-Handlers.
@@ -86,7 +87,7 @@ com.top_logic.xio.importer.handlers.DispatchingImporter.Config.tags = Tag-Behand
 com.top_logic.xio.importer.handlers.DispatchingImporter.Config.tags.tooltip = <i>Handler</i> für Tag-Namen.
 com.top_logic.xio.importer.handlers.DispatchingImporter.tooltip = <i>Handler</i>, der auf der Grundlage des aktuellen Tag-Namens an einen anderen <i>Handler</i> weiterleitet.
 com.top_logic.xio.importer.handlers.Handler$Config$HandlerRef = Ziel-<i>Handler</i>
-com.top_logic.xio.importer.handlers.Handler$Config$HandlerRef.tooltip = Konfiguration des auszuführenden Handlers.
+com.top_logic.xio.importer.handlers.Handler$Config$HandlerRef.tooltip = Umhüllte Konfiguration eines inneren Handlers, die es ermöglicht, den inneren Handler über den Tag-Namen zu spezifizieren (wenn die verweisende Konfiguration bereits eine andere <i>Standard-Container-Eigenschaft</i> hat).
 com.top_logic.xio.importer.handlers.Handler.Config.HandlerRef.handler = Handler
 com.top_logic.xio.importer.handlers.Handler.Config.HandlerRef.handler.tooltip = Der auszuführende Handler.
 com.top_logic.xio.importer.handlers.Handler.Config.id = ID
@@ -173,6 +174,8 @@ com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.scope-var = Konte
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.scope-var.tooltip = Die Variable, der das <i>Expr-Ergebnis</i> zugewiesen werden soll.
 com.top_logic.xio.importer.handlers.ScopedImportHandler.tooltip = <i>Verschachtelter Importhandler</i>, der einen neuen Importkontext durch Auswertung einer Funktion auswählt.
 com.top_logic.xio.importer.handlers.SkipDeep = Teilbaum überspringen
+com.top_logic.xio.importer.handlers.SkipDeep.Config.warn = Warnung
+com.top_logic.xio.importer.handlers.SkipDeep.Config.warn.tooltip = Warnungen über ignorierte Tags melden.
 com.top_logic.xio.importer.handlers.SkipDeep.tooltip = <i>Handler</i>, der den gesamten XML-Inhalt bis zu einem passenden End-Tag überspringt.
 com.top_logic.xio.importer.handlers.StoreHandler = Speicher-Handler
 com.top_logic.xio.importer.handlers.StoreHandler.Config.name = Name
