--- a/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,5 @@
 class.com.top_logic.xio.importer.I18NConstants.ERROR_GETTING_PROPERTY_FAILED__HANDLER_OBJ_PROP_MESSAGE = Failed to retrieve value of property "{2}" from object "{1}": {3}
+class.com.top_logic.xio.importer.handlers.I18NConstants.WARN_IGNORING_UNKNOWN__TAG = Warning: Ignoring unknown tag "{0}".
 com.top_logic.xio.command.XMLImportCommand = XML import command
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec = Import spec
 com.top_logic.xio.command.XMLImportCommand$Config$ImportSpec.tooltip = Container for the import handler definition.
@@ -86,7 +87,7 @@ com.top_logic.xio.importer.handlers.DispatchingImporter.Config.tags = Tags
 com.top_logic.xio.importer.handlers.DispatchingImporter.Config.tags.tooltip = The tag name to <i>handler</i> mapping.
 com.top_logic.xio.importer.handlers.DispatchingImporter.tooltip = <i>Handler</i> that dispatches to another <i>handler</i> based on the current tag-name.
 com.top_logic.xio.importer.handlers.Handler$Config$HandlerRef = Handler reference
-com.top_logic.xio.importer.handlers.Handler$Config$HandlerRef.tooltip = Wrapped configuration of an inner handler that allows specifying the inner handler by tag name (if the using configuration already has another <i>default container</i> property.
+com.top_logic.xio.importer.handlers.Handler$Config$HandlerRef.tooltip = Wrapped configuration of an inner handler that allows specifying the inner handler by tag name (if the referring configuration already has another <i>default container</i> property).
 com.top_logic.xio.importer.handlers.Handler.Config.HandlerRef.handler = Handler
 com.top_logic.xio.importer.handlers.Handler.Config.HandlerRef.handler.tooltip = The inner handler.
 com.top_logic.xio.importer.handlers.Handler.Config.id = ID
@@ -173,6 +174,8 @@ com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.scope-var = Scope
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.scope-var.tooltip = The variable to assign the <i>Expression</i> result to.
 com.top_logic.xio.importer.handlers.ScopedImportHandler.tooltip = <i>Nested import handler</i> selecting a new import scope by evaluating a function.
 com.top_logic.xio.importer.handlers.SkipDeep = Skip deep
+com.top_logic.xio.importer.handlers.SkipDeep.Config.warn = Warn
+com.top_logic.xio.importer.handlers.SkipDeep.Config.warn.tooltip = Report warnings about ignored tags.
 com.top_logic.xio.importer.handlers.SkipDeep.tooltip = <i>Handler</i> that skips all XML content up to a matching end tag.
 com.top_logic.xio.importer.handlers.StoreHandler = Store handler
 com.top_logic.xio.importer.handlers.StoreHandler.Config.name = Name
