Ticket #27849: Fixed JavaDoc, generated I18N.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -706,6 +706,10 @@ com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder = Erba
 com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur <i>Konfiguration</i>.
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder.tooltip = <i>Methodenersteller</i>, der <i>Werte</i> erzeugt.
+com.top_logic.model.search.expr.config.operations.web.ColorFunction$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.web.ColorFunction$Builder.tooltip = <i>Erbauer</i> der <i>Methode</i> zur Erstellung der <i>Farbfunktion</i>.
+com.top_logic.model.search.expr.config.operations.web.ColorValues$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.web.ColorValues$Builder.tooltip = <i>Erbauer</i> der <i>Methode</i> zur Erstellung von <i>Farbwerten</i>.
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder.tooltip = <i>Methodenersteller</i> erstellt <i>Kontextpfad</i>.
 com.top_logic.model.search.expr.reductions.Average$Builder = Erbauer
