--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -706,6 +706,10 @@ com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder = Buil
 com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder.tooltip = <i>Method builder</i> creating <i>to configuration</i>.
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder = Builder
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder.tooltip = <i>Method builder</i> creating <i>values</i>.
+com.top_logic.model.search.expr.config.operations.web.ColorFunction$Builder = Builder
+com.top_logic.model.search.expr.config.operations.web.ColorFunction$Builder.tooltip = <i>Method builder</i> creating <i>color function</i>.
+com.top_logic.model.search.expr.config.operations.web.ColorValues$Builder = Builder
+com.top_logic.model.search.expr.config.operations.web.ColorValues$Builder.tooltip = <i>Method builder</i> creating <i>color values</i>.
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder = Builder
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder.tooltip = <i>Method builder</i> creating <i>context path</i>.
 com.top_logic.model.search.expr.reductions.Average$Builder = Builder
