--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -10,6 +10,8 @@ com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation z
 com.top_logic.graphic.flow.server.script.ScriptConversion.value = Wert
 com.top_logic.graphic.flow.server.script.ScriptConversion.value.tooltip = Die Implementierungsklasse des <i>Wertkonverters</i>.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent = Komponente Flussdiagramm
+com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory = Kontextmenü
+com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = Logik für das Kontextmenü des Diagrammelementes.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.tooltip = <i>Komponente</i>, die ein Flussdiagramm anzeigt.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder = Skript-Flussdiagramm-Erbauer
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart = Diagramm erstellen
