--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -10,6 +10,8 @@ com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation t
 com.top_logic.graphic.flow.server.script.ScriptConversion.value = Value
 com.top_logic.graphic.flow.server.script.ScriptConversion.value.tooltip = The <i>value converter</i> implementation class.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent = Flow chart component
+com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory = Context menu factory
+com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = The provider for the diagram elemnt's context menu.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.tooltip = <i>Component</i> displaying a flow chart.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder = Script flow chart builder
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart = Create chart
