--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -7,11 +7,15 @@ com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_INNER = Obere inn
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_INNER.tooltip = Ein Verbindungsstück am oberen Rand eines <i>Mundes</i>.
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER = Oben außen
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER.tooltip = Ein Verbinder am oberen äußeren Rand eines <i>Blocks</i>.
-com.top_logic.graphic.blocks.model.connector.ConnectorKind.tooltip = Beschreibung der Position eines <i>Steckers</i> innerhalb seiner <code>Connector#getOwner()</code>.
+com.top_logic.graphic.blocks.model.connector.ConnectorKind.tooltip = Beschreibung der Position eines <i>Verbinders</i> innerhalb seines Eigentümers.
 com.top_logic.graphic.blocks.svg.event.MouseButton = Maustaste
 com.top_logic.graphic.blocks.svg.event.MouseButton.LEFT = Links
+com.top_logic.graphic.blocks.svg.event.MouseButton.LEFT.tooltip = Die linke Maustaste.
 com.top_logic.graphic.blocks.svg.event.MouseButton.MIDDLE = Mitte
+com.top_logic.graphic.blocks.svg.event.MouseButton.MIDDLE.tooltip = Die mittlere Maustaste.
 com.top_logic.graphic.blocks.svg.event.MouseButton.RIGHT = Rechts
+com.top_logic.graphic.blocks.svg.event.MouseButton.RIGHT.tooltip = Die rechte Maustaste.
+com.top_logic.graphic.blocks.svg.event.MouseButton.tooltip = Die Maustasten, die <i>SVG-Klickereignisse</i> erzeugen.
 com.top_logic.graphic.flow.data.Alignment = Ausrichtung
 com.top_logic.graphic.flow.data.Alignment.MIDDLE = Mitte
 com.top_logic.graphic.flow.data.Alignment.MIDDLE.tooltip = Der Inhalt wird innerhalb des verfügbaren Platzes des Containers zentriert.
