Ticket #28648: Added `unzip` function.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -22,6 +22,7 @@ class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERR
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Kopfzeilen sollten in der gleichen Zeile{1}" sein, aber{0}" bekommen.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Ungültiger Inhaltstyp "{0}" angegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp{0}" wird nicht unterstützt.
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Die Daten aus "{0}" konnten nicht entpackt werden: {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} darf nicht negativ sein: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = Die angegebene Revision ist null in: {0}.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} ist unbekannt: {0}
@@ -621,6 +622,8 @@ com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pd
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pdf2txt-executable.tooltip = Das im System installierte ausführbare Programm, das für die Konvertierung von PDF in Text aufgerufen wird.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable = Tesseract ausführbar
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable.tooltip = Das im System installierte ausführbare Programm für OCR.
+com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Unzip-Ausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.binary.ZipArchive$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.binary.ZipArchive$Builder.tooltip = <i>Methodenersteller</i> zur Erstellung von <i>Zip-Archivausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.binary.ZipEntry$Builder = Ersteller
