--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -22,6 +22,7 @@ class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERR
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Headers should be in the same row "{1}" but got "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Invalid content type "{0}" specified: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Given content type "{0}" is not supported.
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Failed to unzip data from "{0}": {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = The given commit number {1} must not be negative: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = The given revision is null in: {0}.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = The given commit number {1} is unknown: {0}
@@ -621,6 +622,8 @@ com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pd
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pdf2txt-executable.tooltip = The system-installed executable program to call for PDF to text conversion.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable = Tesseract executable
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable.tooltip = The system-installed executable program for OCR.
+com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder.tooltip = <i>Method builder</i> creating <i>unzip</i> expressions.
 com.top_logic.model.search.expr.config.operations.binary.ZipArchive$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.ZipArchive$Builder.tooltip = <i>Method builder</i> creating <i>zip archive</i> expressions.
 com.top_logic.model.search.expr.config.operations.binary.ZipEntry$Builder = Builder
