Ticket #24649: Added stacked box widget.

--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -9,6 +9,10 @@ com.top_logic.graphic.flow.server.script.ScriptConversion = Skript-Konvertierung
 com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation zum Hinzufügen eines <i>Wertkonverters</i> zu einem Methodenparameter.
 com.top_logic.graphic.flow.server.script.ScriptConversion.value = Wert
 com.top_logic.graphic.flow.server.script.ScriptConversion.value.tooltip = Die Implementierungsklasse des <i>Wertkonverters</i>.
+com.top_logic.graphic.flow.server.script.SideEffectFree = Frei von Nebenwirkungen
+com.top_logic.graphic.flow.server.script.SideEffectFree.canEvaluateAtCompileTime = Kann zur Kompilierzeit ausgewertet werden
+com.top_logic.graphic.flow.server.script.SideEffectFree.canEvaluateAtCompileTime.tooltip = Zu setzendes Flag, um die Konstantenfaltung durch den TL-Script-Compiler zu ermöglichen. <p> Wenn es auf <code>true</code> gesetzt ist, kann die Methode zur Kompilierzeit aufgerufen werden, wenn alle Argumente Konstanten sind. </p>
+com.top_logic.graphic.flow.server.script.SideEffectFree.tooltip = Annotation für eine Java-Methode, die von TL-Script aus aufgerufen werden kann, wenn die Methode keine Seiteneffekte hat.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent = Komponente Flussdiagramm
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory = Kontextmenü
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = Logik für das Kontextmenü des Diagrammelementes.
