--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -9,6 +9,10 @@ com.top_logic.graphic.flow.server.script.ScriptConversion = Script conversion
 com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation to add a <i>value converter</i> to a method parameter.
 com.top_logic.graphic.flow.server.script.ScriptConversion.value = Value
 com.top_logic.graphic.flow.server.script.ScriptConversion.value.tooltip = The <i>value converter</i> implementation class.
+com.top_logic.graphic.flow.server.script.SideEffectFree = Side effect free
+com.top_logic.graphic.flow.server.script.SideEffectFree.canEvaluateAtCompileTime = Can evaluate at compile time
+com.top_logic.graphic.flow.server.script.SideEffectFree.canEvaluateAtCompileTime.tooltip = Flag to set to allow constant folding by the TL-Script compiler. <p> When set to <code>true</code>, the method may be called at compile time, if all arguments are constants. </p>
+com.top_logic.graphic.flow.server.script.SideEffectFree.tooltip = Annotation to set on a Java method that can be called from TL-Script, if the method has no side effects.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent = Flow chart component
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory = Context menu factory
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = The provider for the diagram elemnt's context menu.
