--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -100,6 +100,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Polsterung
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Typ Literal für <i>Auffüllung</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX = Wählbares Feld
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX.tooltip = Schriftzeichen für <i>auswählbares Feld</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.STACK = Stapel
+com.top_logic.graphic.flow.data.Widget.TypeKind.STACK.tooltip = Typ Literal für <i>Stack</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Geben Sie ein Literal für <i>Text</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Baumverbindung
