Ticket #28644: Added test for dynamic visibility of web folder attributes.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_de.properties
@@ -3,6 +3,7 @@ model.test.dynamicmode.Acquisition = Anschaffung
 model.test.dynamicmode.Acquisition.category = Kategorie
 model.test.dynamicmode.Acquisition.critical = unternehmenskritisch
 model.test.dynamicmode.Acquisition.critical.tooltip = Bei einer unternehmenskritischen Anschaffung muss eine Kategorisierung in Verbrauchs- und Investitionsgüter vorgenommen werden.
+model.test.dynamicmode.Acquisition.documents = Dokumente
 model.test.dynamicmode.Acquisition.name = Name
 model.test.dynamicmode.Acquisition.positions = Positions
 model.test.dynamicmode.Acquisition.price = Grundpreis
