--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_en.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_en.properties
@@ -3,6 +3,7 @@ model.test.dynamicmode.Acquisition = Acquisition
 model.test.dynamicmode.Acquisition.category = Category
 model.test.dynamicmode.Acquisition.critical = business critical
 model.test.dynamicmode.Acquisition.critical.tooltip = In the case of a business-critical acquisition, a categorization must be made between consumables and capital goods.
+model.test.dynamicmode.Acquisition.documents = Documents
 model.test.dynamicmode.Acquisition.name = Name
 model.test.dynamicmode.Acquisition.positions = Positions
 model.test.dynamicmode.Acquisition.price = Base price
