Ticket #28652: Allow to perform import on transient model.
A post-processing action may be used to translate the imported object to
a persistent model.

--- a/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.xio.command.I18NConstants.POST_PROCESSING = Performing import post-processing actions.
 class.com.top_logic.xio.importer.I18NConstants.ERROR_GETTING_PROPERTY_FAILED__HANDLER_OBJ_PROP_MESSAGE = Failed to retrieve value of property "{2}" from object "{1}": {3}
 class.com.top_logic.xio.importer.handlers.I18NConstants.WARN_IGNORING_UNKNOWN__TAG = Warning: Ignoring unknown tag "{0}".
 com.top_logic.xio.command.XMLImportCommand = XML import command
@@ -9,12 +10,16 @@ com.top_logic.xio.command.XMLImportCommand.Config.import-definition = Import def
 com.top_logic.xio.command.XMLImportCommand.Config.import-definition.tooltip = The XML import specification.
 com.top_logic.xio.command.XMLImportCommand.Config.logging = Logging
 com.top_logic.xio.command.XMLImportCommand.Config.logging.tooltip = Whether to write import operations to the application log.
+com.top_logic.xio.command.XMLImportCommand.Config.postProcessing = Post processing
+com.top_logic.xio.command.XMLImportCommand.Config.postProcessing.tooltip = Function to invoke on the imported object after the import succeeded. <p> The function receives the imported object as first argument and the command's target model as second argument: </p> <pre> <code>result -> model -> ...</code> </pre> <p> The function is invoked within the import transaction and may create additional side-effects. Especially, if the import creates a transient object, the post processing action is required to transform the transient import result to a persistent object for the import to have any effect. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.progress-height = Progress height
 com.top_logic.xio.command.XMLImportCommand.Config.progress-height.tooltip = The height of the import progress dialog.
 com.top_logic.xio.command.XMLImportCommand.Config.progress-title = Progress title
 com.top_logic.xio.command.XMLImportCommand.Config.progress-title.tooltip = The title of the import progress dialog. <p> If nothing is specified, a generic title is used. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.progress-width = Progress width
 com.top_logic.xio.command.XMLImportCommand.Config.progress-width.tooltip = The width of the import progress dialog.
+com.top_logic.xio.command.XMLImportCommand.Config.transient = Transient
+com.top_logic.xio.command.XMLImportCommand.Config.transient.tooltip = Whether to instantiate objects transiently. <p> To have any effect, the imported object must be further processed in a post processing action. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.upload-header = Upload header
 com.top_logic.xio.command.XMLImportCommand.Config.upload-header.tooltip = The header text being displayed in the upload dialog. <p> If noting is entered, a generic header is used. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.upload-height = Upload height
@@ -119,7 +124,7 @@ com.top_logic.xio.importer.handlers.ObjectCreate = Object create
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.fill-forward-var = Fill forward var
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.fill-forward-var.tooltip = An optional variable that contains an unassigned object reference to fill with the newly created object. <p> This is useful, if an object is assigned some property in an outer context before it can be created. </p>
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.join-duplicates = Join duplicates
-com.top_logic.xio.importer.handlers.ObjectCreate.Config.join-duplicates.tooltip = Whether an existing object should be re-used, if the object with the given <i>ID</i> was already imported.
+com.top_logic.xio.importer.handlers.ObjectCreate.Config.join-duplicates.tooltip = Whether an existing object should be re-used, if the object with the given <i>ID attribute</i> was already imported.
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.model-type = Model type
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.model-type.tooltip = The type to instantiate.
 com.top_logic.xio.importer.handlers.ObjectCreate.tooltip = <i>Object import</i> creating a new object.
