--- a/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.xio.command.I18NConstants.POST_PROCESSING = Import-Nachbearbeitung wird durchgeführt.
 class.com.top_logic.xio.importer.I18NConstants.ERROR_GETTING_PROPERTY_FAILED__HANDLER_OBJ_PROP_MESSAGE = Der Wert der Eigenschaft "{2}" konnte nicht von Objekt "{1}" abgerufen werden: {3}
 class.com.top_logic.xio.importer.handlers.I18NConstants.WARN_IGNORING_UNKNOWN__TAG = Warnung: Unbekanntes Tag "{0}" wird ignoriert.
 com.top_logic.xio.command.XMLImportCommand = XML-Import-Befehl
@@ -9,12 +10,16 @@ com.top_logic.xio.command.XMLImportCommand.Config.import-definition = Definition
 com.top_logic.xio.command.XMLImportCommand.Config.import-definition.tooltip = Die XML-Import-Spezifikation, siehe TopLogic Entwicklerhandbuch.
 com.top_logic.xio.command.XMLImportCommand.Config.logging = Protokollierung
 com.top_logic.xio.command.XMLImportCommand.Config.logging.tooltip = Ob Importvorgänge in das Anwendungsprotokoll geschrieben werden sollen.
+com.top_logic.xio.command.XMLImportCommand.Config.postProcessing = Nachbearbeitung
+com.top_logic.xio.command.XMLImportCommand.Config.postProcessing.tooltip = Funktion, die auf dem importierten Objekt aufgerufen wird, nachdem der Import erfolgreich war. <p> Die Funktion erhält das importierte Objekt als erstes Argument und das Zielmodell des Befehls als zweites Argument: </p> <pre> <code>result -> model -> ...</code> </pre> <p> Die Funktion wird innerhalb der Importtransaktion aufgerufen und kann zusätzliche Nebeneffekte erzeugen. Insbesondere, wenn der Import ein transientes Objekt erzeugt, ist die Nachbearbeitung erforderlich, um das transiente Importergebnis in ein persistentes Objekt umzuwandeln, damit der Import überhaupt eine Wirkung hat. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.progress-height = Höhe des Fortschrittdialogs
 com.top_logic.xio.command.XMLImportCommand.Config.progress-height.tooltip = Die Höhe des Dialogs für den Importfortschritt.
 com.top_logic.xio.command.XMLImportCommand.Config.progress-title = Titel Fortschrittdialog
 com.top_logic.xio.command.XMLImportCommand.Config.progress-title.tooltip = Der Titel des Dialogs für den Importfortschritt. <p> Wenn nichts angegeben wird, wird ein allgemeiner Titel verwendet. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.progress-width = Breite des Fortschrittdialogs
 com.top_logic.xio.command.XMLImportCommand.Config.progress-width.tooltip = Die Breite des Dialogs für den Importfortschritt.
+com.top_logic.xio.command.XMLImportCommand.Config.transient = Transient
+com.top_logic.xio.command.XMLImportCommand.Config.transient.tooltip = Ob Objekte vorübergehend instanziiert werden sollen. <p> Um eine Wirkung zu erzielen, muss das importierte Objekt in einer Nachbearbeitungsaktion weiterverarbeitet werden. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.upload-header = Titel Dateiauswahl
 com.top_logic.xio.command.XMLImportCommand.Config.upload-header.tooltip = Titel für den Dateiauswahl-Dialog. <p> Wenn keine Angaben gemacht werden, wird eine generische Kopfzeile verwendet. </p>
 com.top_logic.xio.command.XMLImportCommand.Config.upload-height = Höhe Dateiauswahl
@@ -119,7 +124,7 @@ com.top_logic.xio.importer.handlers.ObjectCreate = Objekterzeugung
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.fill-forward-var = Objekt-Variable
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.fill-forward-var.tooltip = Eine optionale Variable, die eine nicht zugewiesene Objektreferenz enthält, die mit dem neu erstellten Objekt gefüllt werden soll. <p> Dies ist nützlich, wenn einem Objekt eine Eigenschaft in einem äußeren Kontext zugewiesen wird, bevor es erstellt werden kann. </p>
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.join-duplicates = Bestehendes Objekt verwenden
-com.top_logic.xio.importer.handlers.ObjectCreate.Config.join-duplicates.tooltip = Ob ein vorhandenes Objekt wiederverwendet werden soll, wenn das Objekt mit der angegebenen <i>ID</i> bereits importiert wurde.
+com.top_logic.xio.importer.handlers.ObjectCreate.Config.join-duplicates.tooltip = Ob ein vorhandenes Objekt wiederverwendet werden soll, wenn das Objekt mit dem angegebenen <i>ID-Attribut</i> bereits importiert wurde.
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.model-type = Modelltyp
 com.top_logic.xio.importer.handlers.ObjectCreate.Config.model-type.tooltip = Der zu instanziierende Typ.
 com.top_logic.xio.importer.handlers.ObjectCreate.tooltip = <i>Objektimport</i> zum Erstellen eines neuen Objekts.
